8310425: [JVMCI] fix jvmci support for null DynamicConstant and DynamicConstant in error.